--- a/style.css
+++ b/style.css
@@ -5,12 +5,30 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    transition: background-color 1s ease-in, color 1s ease;
 }
 
 button {
-  cursor: pointer;
-  border: none;
-  background: none;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+
+:root {
+    --body-bgcolor: #e8ebf7;
+    --item-color: #fff;
+    --text-color: #000;
+    --shadow-color: rgba(0, 0, 0, 0.8);
+    --bottomMenu-bgcolor: #FDFDFD;
+}
+
+body.darkTheme {
+    --body-bgcolor: #281a49;
+    --item-color: #3e365c;
+    --text-color: #e9e4f0; 
+    --shadow-color: rgb(252, 148, 166);
+    --bottomMenu-bgcolor: #53477e;
 }
 
 
@@ -20,28 +38,37 @@ button {
     background-color: #f79fff35;
 }
 
-.main {
-    display: flex;
-    justify-content: center;
-}
-
 .main-body {
+    background-color: var(--body-bgcolor);
+    color: var(--text-color);
     max-width: 400px;
     margin: 0 auto;
     min-height: 100vh;
     min-height: 100dvh;
-    background: #f4f6fc; 
     display: flex;
     flex-direction: column;
     position: relative;
+    justify-content: space-between;
 }
 
-.upper-body {
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.4rem 2rem 0 2rem;
+}
+
+.toggle-btn {
+    font-size: 1.5rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
     padding: 2rem 1.5rem;
 }
 
 .search-box {
-    background-color: #fff;
+    background-color: var(--item-color);
     width: 100%;
     padding: .7rem 1rem;
     border-radius: 1rem;
@@ -50,6 +77,7 @@ button {
 }
 
 .search-input {
+    background-color: var(--item-color);
     width: 100%;
     border: none;
     outline: none;
@@ -62,7 +90,12 @@ button {
 .title-filter {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 2rem .2rem;
+}
+
+.filer-btn {
+    padding: .5rem;
 }
 
 
@@ -85,12 +118,48 @@ button {
 .task {
     list-style: none;
     display: flex;
-    background-color: #fff;
+    background-color: var(--item-color);
     padding: 1rem 1.2rem;
     align-items: center;
     border-radius: 1.5rem;
     gap: 1rem;
 }
+
+
+.task input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    accent-color: #F27D9E;
+    position: relative;
+    z-index: 4;
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    border: 2px solid #F27D9E;
+    border-radius: 50%;
+    background-color: transparent;
+}
+
+.task input[type="checkbox"]:checked {
+    background-color: #F27D9E;
+}
+
+.task input[type="checkbox"]:checked::after {
+    content: '✓';
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    transform: translate(3px, -1px);
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.task input[type="checkbox"]::before {
+    display: none;
+}
+
 
 .task .details {
     display: flex;
@@ -104,32 +173,40 @@ button {
 
 .dropdown {
     position: relative;
+    color: var(--text-color);
+}
+
+.dropdown-btn {
+    color: var(--text-color);
 }
 
 .⋮ {
     font-size: 1.8rem;
+    padding: .5rem;
 }
 
 .dropdown-menu {
     position: absolute;
     top: 100%;
     right: 0;
-    
+
     display: none;
-    background: #fff;
+    background: var(--item-color);
     border-radius: 6px;
-    box-shadow: 0 10px 25px rgba(0,0,0,.15);
+    box-shadow: 0 2px 20px var(--shadow-color);
     z-index: 1000;
 }
 
 .dropdown-menu.open {
     display: block;
+    /* border: .1px solid var(--text-color); */
+    border-radius: 1rem;
 }
 
 .dropdown-menu button {
-    width: 100%;
+    font-size: 1.2rem;
+    color: var(--text-color);
     padding: 8px 12px;
-    border: none;
     background: none;
     text-align: left;
 }
@@ -139,12 +216,13 @@ button {
 
 
 .noTasks {
-    width: 100%;
+    width: 90%;
     height: 40vh;
     border: 3px solid rgb(252, 148, 166);
     border-radius: 1rem;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 .noTasks span {
@@ -167,7 +245,7 @@ button {
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    
+
     background-color: rgba(0, 0, 0, 0.4);
     justify-content: center;
     align-items: center;
@@ -177,7 +255,7 @@ button {
     width: 90%;
     max-width: 340px;
     height: 60%;
-    background-color: #fff;
+    background-color: var(--item-color);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -186,7 +264,10 @@ button {
 
 .submit-input {
     outline: none;
-    /* border: none; */
+}
+
+input {
+    color: var(--text-color);
 }
 
 .submit-body div {
@@ -207,31 +288,49 @@ button {
 
 
 
-.bottom-menu {
-    height: 60px;
-    width: 100%;
+.bottom-wrapper {
     position: sticky;
     bottom: 0;
-    margin-top: auto;
-    background: #fff;
+    height: 60px;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+    z-index: 5;
 }
 
+.bottom-menu {
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    background: var(--item-color);
+    background: var(--bottomMenu-bgcolor);
+    border-radius: 40px 40px 0 0;
 
-
-
+    mask-image: radial-gradient(
+        circle 40px at center top,
+        transparent 99%,
+        black 100%
+    );
+    -webkit-mask-image: radial-gradient(
+        circle 40px at center top,
+        transparent 99%,
+        black 100%
+    );
+}
 
 .add-btn {
-    /* margin: auto; */
+    position: relative;
+    z-index: 10;
     width: 60px;
     height: 60px;
     border-radius: 50%;
     transform: translateY(-50%);
 }
 
+
 .add-btn:hover {
-    transform: translateY(-50%)  scale(1.1);
+    transform: translateY(-50%) scale(1.1);
 }
 
 
@@ -240,9 +339,9 @@ button {
 
 
 @media (max-width: 800px) {
- .main-body {
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-}   
+    .main-body {
+        width: 100%;
+        max-width: 100%;
+        margin: 0;
+    }
 }
